--- a/app/src/main/res/layout/favorite_screen.xml
+++ b/app/src/main/res/layout/favorite_screen.xml
@@ -16,17 +16,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <TextView
+            android:id="@+id/myCartToolbarText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/metrophobic"
-            android:text="Favorilerim"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="156dp"
-            tools:layout_editor_absoluteY="18dp" />
+            android:paddingTop="20dp"
+            android:text="@string/favorites_header"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="162dp"
+            tools:layout_editor_absoluteY="16dp" />
+
 
     </androidx.appcompat.widget.Toolbar>
 
