--- a/app/src/main/res/layout/my_cart_card_design.xml
+++ b/app/src/main/res/layout/my_cart_card_design.xml
@@ -23,7 +23,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/telefon" />
@@ -109,6 +109,15 @@
                 app:layout_constraintBottom_toTopOf="@+id/quantityLayout"
                 app:layout_constraintStart_toEndOf="@+id/productImageView" />
 
+            <View
+                android:id="@+id/topDivider"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="7dp"
+                android:background="#D0CECE"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/totalPrice" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
